# university-project-datacrawling

./: .gitignore  README.md  age_statistics_api.py  app.py  front.py  job_recommendation_app.py  main.py  pyproject.toml  regional_statistics_api.py
.devcontainer/: devcontainer.json
API/: app.py
API/age_voice_phising/: age_voice_phishing.py  age_vp.py
API/cyber_crime_analysis/: cca_main.py  main.py
API/cyber_crime_deep_analysis/: cyber_crime_deep_a1.py  cyber_crime_deep_a2.py  cyber_crime_deep_a3.py
API/cyber_financial_crime/: main.py
API/internet_banking_usage/: ibu_main.py  internet_banking.csv  main.py
API/regional_voice_phishing/: main.py  regional_voice_phishing.py  regional_vp.py
API/voice_phishing_by_age/: main.py
notice_analysis/: lasso_result.csv  linear_result.csv  main.py  skuniv_notice_2024_2025.csv  top_views.csv
notice_crawling/: main.py  skuniv_notice_2020_2025.csv
recruiment_body_crawling/: main.py  skuniv_recruitment_body.csv
recruitment_info_analysis/: jobkorea_recruitment_titles.csv  ri_analysis.py  skuniv_recruitment_titles.csv
recruitment_info_crawling/: jobkorea_ri_crawling.py  skuniv_ri_crawling.py
